--- a/src/Resources/config/pimcore/routing.yml
+++ b/src/Resources/config/pimcore/routing.yml
@@ -6,3 +6,7 @@ social_data_connector_facebook_connect:
 social_data_connector_facebook_connect_check:
     path: /admin/social-data/connector/facebook/check
     defaults: { _controller: SocialData\Connector\Facebook\Controller\Admin\FacebookController::checkAction }
+
+social_data_connector_facebook_debug_token:
+    path: /admin/social-data/connector/facebook/debug-token
+    defaults: { _controller: SocialData\Connector\Facebook\Controller\Admin\FacebookController::debugTokenAction }
