--- a/.github/workflows/ecs.yml
+++ b/.github/workflows/ecs.yml
@@ -122,4 +122,5 @@ jobs:
                 continue-on-error: true
                 run: |
                     bin/console cache:warmup --env=test
+                    ls -la src
                     vendor/bin/ecs check src/SocialDataFacebookConnectorBundle --config easy-coding-standard.yml
