--- a/.github/workflows/codeception.yml
+++ b/.github/workflows/codeception.yml
@@ -40,12 +40,10 @@ jobs:
             matrix:
                 php: [ 8.0 ]
                 symfony: [ ^5.4 ]
-                pimcore: [ ~10.1.0, ~10.2.0 ]
+                pimcore: [ ~10.5.0 ]
                 include:
-                    -   pimcore: ~10.1.0
-                        template_tag: v10.1.0
-                    -   pimcore: ~10.2.0
-                        template_tag: v10.1.4
+                    -   pimcore: ~10.5.0
+                        template_tag: v10.2.0
         steps:
             -   uses: actions/checkout@v2
                 with:
